--- a/Pathfinder 2E by PAUR/src/PF2E.scss
+++ b/Pathfinder 2E by PAUR/src/PF2E.scss
@@ -1,19 +1,35 @@
 //globals?
+img{
+  max-width: 100%;
+}
+
 .sheet-wrapper{
     min-width: 8.5in;
     min-height: 11in;
     overflow: scroll;
-    background-color: #0000ff22;
+    background-color: black;
     display: grid;
     grid-auto-columns: 1fr 2fr 2fr;
     grid-auto-rows: 250px 50px auto;
+    grid-gap: 3px;
 }
 
 .sheet-page{
-    display: contents;
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: span 3;
     > div{
-      border: 3px solid black;
+      background: white;
     }
+}
+
+//helper classes?
+//might add some col and row classes here later if they are used often enough
+.sheet-left{
+  float: left;
+}
+.sheet-right{
+  float:right;
 }
 
 
